@@ -28,18 +28,19 @@ public class Condottiere extends Character {
         if (p.isPresent()) {
             System.out.println(printEffect(p.get()));
             collectTaxes(p.get(), Military);
-            chooseBuild(b, chooseTarget(b, p), p);
+            chooseBuild(b, chooseTarget(b, p.get()), p.get());
         } else
             throw new IllegalArgumentException("No Role " + getName() + " in this board");
     }
 
     /**
      * Chooses the Condottiere's target
-     * @param board the current game's board
+     *
+     * @param board  the current game's board
      * @param player the Condottiere's player
      * @return the Condottiere's target
      */
-    public Optional<Player> chooseTarget(Board board, Optional<Player> player) {
+    public Player chooseTarget(Board board, Player player) {
         TreeMap<Integer, Player> cityMap = new TreeMap<>();
         for (Player p : board.getPlayers()) {
             cityMap.put(p.getCity().size(), p);
@@ -49,44 +50,42 @@ public class Condottiere extends Character {
                 .stream()
                 .sorted(Map.Entry.comparingByKey())
                 .map(Map.Entry::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
-        cityList.removeIf(c -> c.equals(player.get()) || c.getRole().get().getClass() == Bishop.class
-                                || !c.getRole().isPresent());
+        cityList.removeIf(c -> c.equals(player) || c.getRole().getClass() == Bishop.class);
 
-        return Optional.ofNullable(cityList.get(cityList.size() - 1));
+        return cityList.get(cityList.size() - 1);
     }
 
     /**
      * Chooses the target's building to destroy
-     * @param board the current game's board
+     *
+     * @param board  the current game's board
      * @param target the Condotiiere's target
-     * @param condo the Condottiere's player
+     * @param condo  the Condottiere's player
      */
-    public void chooseBuild(Board board, Optional<Player> target, Optional<Player> condo) {
-        if (target.isPresent()) {
-            TreeMap<Integer, Building> costMap = new TreeMap<>();
-            for (Building b : target.get().getCity()) {
-                costMap.put(b.getCost(), b);
-            }
-            ArrayList<Building> costList = (ArrayList<Building>) costMap
-                    .entrySet()
-                    .stream()
-                    .sorted(Map.Entry.comparingByKey())
-                    .map(Map.Entry::getValue)
-                    .collect(Collectors.toList());
-
-            Building build;
-            if(condo.get().getGold() > 10) build = costList.get(costList.size() - 1);
-            else build = costList.get(0);
-
-            if (condo.get().getGold() >= build.getCost()) {
-                board.getPile().putCard(build);
-                target.get().getCity().remove(build);
-                condo.get().refundGold(build.getCost() - 1);
-                System.out.println("Le batiment " + build.getName() + " du joueur " + target.get().getName() + " a été détruit.");
-            }
-            //TODO affichage
+    public void chooseBuild(Board board, Player target, Player condo) {
+        TreeMap<Integer, Building> costMap = new TreeMap<>();
+        for (Building b : target.getCity()) {
+            costMap.put(b.getCost(), b);
         }
+        ArrayList<Building> costList = (ArrayList<Building>) costMap
+                .entrySet()
+                .stream()
+                .sorted(Map.Entry.comparingByKey())
+                .map(Map.Entry::getValue)
+                .collect(Collectors.<Building>toList());
+
+        Building build;
+        if (condo.getGold() > 10) build = costList.get(costList.size() - 1);
+        else build = costList.get(0);
+
+        if (condo.getGold() >= build.getCost()) {
+            board.getPile().putCard(build);
+            target.getCity().remove(build);
+            condo.refundGold(build.getCost() - 1);
+            System.out.println("Le batiment " + build.getName() + " du joueur " + target.getName() + " a été détruit.");
+        }
+        //TODO affichage
     }
 }
